--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -14,7 +14,9 @@
     <h1></h1>
     <h2></h2>
     <h3></h3>
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Company Logo">
+    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Company Logo">
+    </a>
 </body>
 
 </html>
