--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,49 +7,35 @@
 </head>
 
 <body>
-    <p></p>
-    <p></p>
-    <p></p>
-    <p></p>
-    <h1></h1>
-    <h2></h2>
-    <h3></h3>
-    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
-        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Company Logo">
-    </a>
-    <article>
-        <table>
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Age</th>
-                    <th>Country</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>John</td>
-                    <td>25</td>
-		    <td>USA</td>
-		</tr>
-		<tr>
-		    <td>Emily</td>
-		    <td>28</td>
-		    <td>Canada</td>
-		</tr>
-		<tr>
-		    <td>Michael</td>
-		    <td>32</td>
-		    <td>Australia</td>
-		</tr>
-		<tr>
-		    <td>Sophia</td>
-		    <td>21</td>
-		    <td>UK</td> 
-		</tr>                
-            </tbody>
-        </table>
-    </article>
+    <header>
+        <ul>
+            <li><a href="./base_index.html">Base Index</a></li>
+            <li><a href="./index.html">Index</a></li>
+            <li><a href="./tweets.html">Tweets</a></li>
+        </ul>
+    </header>
+    <main>
+        <article>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <h1></h1>
+            <h2></h2>
+            <h3></h3>
+            <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
+                <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="Company Logo">
+            </a>
+            <a href="./tweets.html">Tweets</a>
+        </article>
+        <aside>
+            <p></p>
+        </aside>
+
+    </main>
+    <footer>
+        Made by Onwumere Chidi -<a href="#" target="_blank">here</a>
+    </footer>
 
 </body>
 
