--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -7,10 +7,28 @@
 </head>
 
 <body>
-    <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">Stoners will smoke a blunt in the car to prepare to hike thru the woods so they can smoke a blunt in the woods just to go back home and smoke a blunt</p>&mdash; Weed Porn (@BudPictures) <a href="https://twitter.com/BudPictures/status/1111076956957757440?ref_src=twsrc%5Etfw">March 28, 2019</a>
-    </blockquote>
-    <a href="./index.html">index.html</a>
+    <header>
+        <ul>
+            <li><a href="./base_index.html">Base Index</a></li>
+            <li><a href="./index.html">Index</a></li>
+            <li><a href="./tweets.html">Tweets</a></li>
+        </ul>
+    </header>
+    <main>
+        <article>
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">Stoners will smoke a blunt in the car to prepare to hike thru the woods so they can smoke a blunt in the woods just to go back home and smoke a blunt</p>&mdash; Weed Porn (@BudPictures) <a href="https://twitter.com/BudPictures/status/1111076956957757440?ref_src=twsrc%5Etfw">March 28, 2019</a>
+            </blockquote>
+            <a href="./index.html">index.html</a>
+        </article>
+        <aside>
+            <p></p>
+        </aside>
+    </main>
+    <footer>
+        Made by Onwumere Chidi -<a href="#" target="_blank">here</a>
+    </footer>
+
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </body>
 
