using html semantics for index and tweets web pages

--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -22,7 +22,7 @@
             <a href="./index.html">index.html</a>
         </article>
         <aside>
-            <p></p>
+            <p>placeholder to add comment thread later</p>
         </aside>
     </main>
     <footer>
