--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -29,7 +29,7 @@
             <a href="./tweets.html">Tweets</a>
         </article>
         <aside>
-            <p></p>
+            <p>placeholder to add comment thread later</p>
         </aside>
 
     </main>
