--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -9,7 +9,6 @@
 <body>
     <header>
         <ul>
-            <li><a href="./base_index.html">Base Index</a></li>
             <li><a href="./index.html">Index</a></li>
             <li><a href="./tweets.html">Tweets</a></li>
         </ul>
@@ -34,7 +33,7 @@
 
     </main>
     <footer>
-        Made by Onwumere Chidi -<a href="#" target="_blank">here</a>
+        Made by Onwumere Chidi -<a href="https://github.com/csamii" target="_blank">here</a>
     </footer>
 
 </body>
