--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -9,7 +9,6 @@
 <body>
     <header>
         <ul>
-            <li><a href="./base_index.html">Base Index</a></li>
             <li><a href="./index.html">Index</a></li>
             <li><a href="./tweets.html">Tweets</a></li>
         </ul>
@@ -26,7 +25,7 @@
         </aside>
     </main>
     <footer>
-        Made by Onwumere Chidi -<a href="#" target="_blank">here</a>
+        Made by Onwumere Chidi -<a href="https://github.com/csamii" target="_blank">here</a>
     </footer>
 
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
