using html semantics for index and tweets web pages

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -33,7 +33,7 @@
 
     </main>
     <footer>
-        Made by Onwumere Chidi -<a href="https://github.com/csamii" target="_blank">here</a>
+        <p>by Onwumere Chidi -<a href="https://github.com/csamii" target="_blank">here</a></p>
     </footer>
 
 </body>
