using html semantics for index and tweets web pages

--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -30,10 +30,9 @@
         <aside>
             <p>placeholder to add comment thread later</p>
         </aside>
-
     </main>
     <footer>
-        <p>by Onwumere Chidi -<a href="https://github.com/csamii" target="_blank">here</a></p>
+        <p>Made by Onwumere Chidi -<a href="https://github.com/csamii" target="_blank">here</a></p>
     </footer>
 
 </body>
