--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -25,7 +25,7 @@
         </aside>
     </main>
     <footer>
-        Made by Onwumere Chidi -<a href="https://github.com/csamii" target="_blank">here</a>
+        <p>Made by Onwumere Chidi -<a href="https://github.com/csamii" target="_blank">here</a></p>
     </footer>
 
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
