--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,13 +23,15 @@
         <h2>Introduction</h2>
         <p>Chidi Onwumere is an aspiring software engineer and advocate for educational equity, driven by a mission to bridge the gap in access to quality primary education in rural Nigeria. With hands-on experience in both community development and technology,
             Chidi brings a unique blend of empathy, technical skill, and social commitment to his work.</p>
-    </section id="projects">
-    <h2>Projects</h2>
-    <article class="project">
-        <h3>Project Title</h3>
-        <p>Project Description</p>
-        <p><a href="#projectlink" target="_blank">Project Link</a></p>
-    </article>
+    </section>
+    <section id="projects">
+        <h2>Projects</h2>
+        <article class="project">
+            <h3>Project Title</h3>
+            <p>Project Description</p>
+            <p><a href="#projectlink" target="_blank">Project Link</a></p>
+        </article>
+    </section>
     <section id="about">
         <h2>About Me</h2>
         <p>Chidi specializes in Front-End Development, using code to craft intuitive and engaging digital experiences. Through his work, he aims to empower people around him with tools they need to thrive.
