update on index

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -19,46 +19,48 @@
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
-    <section id="introduction">
-        <h2>Introduction</h2>
-        <p>Chidi Onwumere is an aspiring software engineer and advocate for educational equity, driven by a mission to bridge the gap in access to quality primary education in rural Nigeria. With hands-on experience in both community development and technology,
-            Chidi brings a unique blend of empathy, technical skill, and social commitment to his work.</p>
-    </section>
-    <section id="projects">
-        <h2>Projects</h2>
-        <article class="project">
-            <h3>Project Title</h3>
-            <p>Project Description</p>
-            <p><a href="#projectlink" target="_blank">Project Link</a></p>
-        </article>
-    </section>
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Chidi specializes in Front-End Development, using code to craft intuitive and engaging digital experiences. Through his work, he aims to empower people around him with tools they need to thrive.
-        </p>
-        <p>Beyond the screen, Chidi is known for his humor and curiosity. Fun fact: he once tried to learn how to juggle to improve his focus… and accidentally knocked over a full tray of jollof rice at a family event. Let’s just say, he’s better with code
-            than with coordination.</p>
-        <h4>Skills</h4>
-        <ul>
-            <li>HTML5</li>
-            <li>CSS</li>
-            <li>JAVASCRIPT</li>
-        </ul>
-        <h4>Hobbies</h4>
-        <ul>
-            <li>Football</li>
-            <li>Basketball</li>
-            <li>Chess</li>
-        </ul>
-    </section>
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:chidisamuel16@gmail.com">chidisamuel16@gmail.com</a></p>
-        <p>
-            <a href="https://www.linkedin.com/in/chidi-onwumere-46a087105/" target="_blank">LinkedIn</a> |
-            <a href="https://github.com/csamii" target="_blank" rel="noopener noreferrer">GitHub</a>
-        </p>
-    </section>
+    <main>
+        <section id="introduction">
+            <h2>Introduction</h2>
+            <p>Chidi Onwumere is an aspiring software engineer and advocate for educational equity, driven by a mission to bridge the gap in access to quality primary education in rural Nigeria. With hands-on experience in both community development and
+                technology, Chidi brings a unique blend of empathy, technical skill, and social commitment to his work.</p>
+        </section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <article class="project">
+                <h3>Project Title</h3>
+                <p>Project Description</p>
+                <p><a href="#projectlink" target="_blank">Project Link</a></p>
+            </article>
+        </section>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Chidi specializes in Front-End Development, using code to craft intuitive and engaging digital experiences. Through his work, he aims to empower people around him with tools they need to thrive.
+            </p>
+            <p>Beyond the screen, Chidi is known for his humor and curiosity. Fun fact: he once tried to learn how to juggle to improve his focus… and accidentally knocked over a full tray of jollof rice at a family event. Let’s just say, he’s better with
+                code than with coordination.</p>
+            <h4>Skills</h4>
+            <ul>
+                <li>HTML5</li>
+                <li>CSS</li>
+                <li>JAVASCRIPT</li>
+            </ul>
+            <h4>Hobbies</h4>
+            <ul>
+                <li>Football</li>
+                <li>Basketball</li>
+                <li>Chess</li>
+            </ul>
+        </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Email: <a href="mailto:chidisamuel16@gmail.com">chidisamuel16@gmail.com</a></p>
+            <p>
+                <a href="https://www.linkedin.com/in/chidi-onwumere-46a087105/" target="_blank">LinkedIn</a> |
+                <a href="https://github.com/csamii" target="_blank" rel="noopener noreferrer">GitHub</a>
+            </p>
+        </section>
+    </main>
     <footer>
         <p>&copy; 2024 Chidi Onwumere</p>
     </footer>
